<resources>
    <string name="app_name">crm</string>
    <string name="app_info">CRM系统测试版本</string>


    <string name="menu_product_storage">产品入库</string>
    <string name="menu_packing">产品装箱</string>
    <string name="menu_send_agent">发箱</string>
    <string name="menu_receiptc_boxs">收箱</string>
    <string name="menu_send_distributor">发货</string>
    <string name="menu_receiptc_products">收货</string>
    <string name="menu_construction">施工</string>
    <string name="menu_security">防伪</string>
    <string name="menu_track">跟踪</string>
    <string name="menu_agent_management">代理商管理</string>

    <string name="product_scan_start">扫描</string>
    <string name="product_scan_stop">停止扫描</string>








    <string name="login_username">用户名:</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="login_submit_button_text">登录</string>
    <string name="login_submit_close_text">关闭</string>
    <string name="login_username_empty_message">请输入用户名</string>
    <string name="login_password_empty_message">请输入密码</string>

</resources>
