<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_info"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.28"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_login_username"
            android:layout_width="0dp"
            android:layout_weight="0.72"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.28"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/text_login_password"
            android:layout_width="0dp"
            android:layout_weight="0.72"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/login_submit_button_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_btn_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/login_submit_close_text"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>